@@ -1,0 +1,59 @@
+name: publish_demos2
+
+on:
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Manual'
+        required: false
+        default: ''
+
+env:
+  BUILD_TYPE: Release
+  BUILD_DIR : build
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    container:
+      # Corresponding docker file comes from:
+      # https://github.com/gstlearn/docker-generate
+      image: gstlearn/ubuntu-16-demos-rmd-ipynb
+      
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Setup personal R libraries directory
+      # Beware : ~/ is Linux only. For a potential windows a solution must be found yet
+      run: mkdir -p ~/r_libs & echo ".libPaths('~/r_libs')" > ~/.Rprofile
+
+    - name: Build demonstration HTMLs and save generated folder name in the environment
+      run: |
+        export PATH=/opt/python/py311/bin:$PATH
+        cmake -B${{env.BUILD_DIR}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_PYTHON=ON -DBUILD_R=ON
+        cmake --build ${{env.BUILD_DIR}} --target build_demos
+        PROJECT_VERSION=$(cmake --build ${{env.BUILD_DIR}} --target print_version | grep PROJECT_VERSION | cut -d "=" -f2 | xargs)
+        echo "DEMO_FOLDER=${{env.BUILD_DIR}}/demo" >> "$GITHUB_ENV"
+        echo "PROJECT_VERSION=${PROJECT_VERSION}" >> "$GITHUB_ENV"
+
+    - name: Print version
+      run: echo "PROJECT_VERSION=${{ env.PROJECT_VERSION }}"
+
+    - uses: actions/upload-artifact@v3 
+      with:
+        # This will become the folder name in the server
+        name: demos-${{ env.PROJECT_VERSION }}
+        path: ${{ env.DEMO_FOLDER }}
+
+  publish:
+    needs: build
+    # Only ubuntu can upload to CRAN easily (ssh)
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: fabien-ors/folder-publish-action@v1
+      with:
+        host: ${{ secrets.CG_HOST }}
+        username: ${{ secrets.CG_USR }}
+        password: ${{ secrets.CG_PWD }}
+        dest-path: "/var/www/html/swigex"
