@@ -90,3 +90,8 @@ include(CTest)
 enable_testing()
 
 add_subdirectory(tests)
+
+####################################################
+## DEMONSTRATION SCRIPTS
+
+add_subdirectory(doc/demo)
