@@ -45,6 +45,7 @@
 # Demonstration scripts:
 #  - check_ipynb    Execute demonstration scripts (jupyter notebooks)
 #  - check_rmd      Execute demonstration scripts (R Markdown)
+#  - build_demos    Execute demonstration scripts (jupyter and R Markdown) and build HTMLs
 #
 # Clean:
 #  - clean          Clean generated files
@@ -186,7 +187,7 @@ r_upload: r_build
 
 
 
-.PHONY: check_data check_cpp check_py check_r check check_ipynb check_rmd check_test_cpp check_test_py check_test_r
+.PHONY: check_data check_cpp check_py check_r check check_ipynb check_rmd check_test_cpp check_test_py check_test_r build_demos
 
 check_data: cmake
 	@CTEST_OUTPUT_ON_FAILURE=1 cmake --build $(BUILD_DIR) --target check_data -- --no-print-directory $(N_PROC_OPT)
@@ -217,6 +218,10 @@ check_test_py: cmake-python
 
 check_test_r: cmake-r
 	@cd $(BUILD_DIR); make prepare_check_r; CTEST_OUTPUT_ON_FAILURE=1 ctest -R $(TEST)
+
+build_demos: cmake-python-r
+	@cmake --build $(BUILD_DIR) --target build_demos -- --no-print-directory $(N_PROC_OPT)
+
 
 .PHONY: clean clean_all
 
