@@ -107,8 +107,8 @@ endif()
 # Link to static library
 target_link_libraries(r_build PUBLIC ${PROJECT_NAME}::static)
 
-# Transmit the fact that we are linking to static ${PROJECT_NAME} library
-set(COMP_FLAGS "-D${PROJECT_NAME_UP}_STATIC_DEFINE -Wno-unused-parameter -Wno-uninitialized -Wno-free-nonheap-object -Wno-cast-function-type") # Prevent some SWIG C++/R warnings
+# Transmit the fact that we are linking to static ${PROJECT_NAME} library and remove a lot of warnings generated by wrapper compilation
+set(COMP_FLAGS "-D${PROJECT_NAME_UP}_STATIC_DEFINE -Wno-free-nonheap-object -Wno-maybe-uninitialized -Wno-unused-variable -Wno-unused-parameter -Wno-uninitialized -Wno-free-nonheap-object -Wno-cast-function-type") # Prevent some SWIG C++/R warnings
 
 # Set some properties on SWIG target
 set_target_properties(r_build PROPERTIES
