@@ -6,6 +6,7 @@ This file contains the logs between consecutive releases
 Release 0.3.2
 =============
 - Add How to cite in READMEs
+- Add publish demos and publish doxygen workflows
 
 Release 0.3.1
 =============
